Merge branch 'feature/fe-code-cov' of https://github.com/CyrussT/nus-iss-group-8 into feature/fe-code-cov (#94)
* Added unit tests for FE

* Updated test script for bun test

* updated test in ci pipeline

* Updated test for frontend ci pipeline

* removed --no-threads from test ci pipeline

* Modified BookingCalendar Testing

* Fixes for code

* Added Sonarqube fixes

* Code smell fix

* Code smell fixes

* Removal of mockbeans

* Code smell fixes

* Undo bookingsearchBar fix

* Added mockitobean (still broken)

* Fixed ControllerTests mockbeans

* Removal of unused import

* Conversion to stream.toList

* Removal of log

* Removal of logger

* Resolving of Security and Code Smell Issues

---------

Co-authored-by: cyrus <24277152+CyrussT@users.noreply.github.com>